changed init get to ten, fixed form to fit content, added space for results and aligned text

--- a/public/styles.css
+++ b/public/styles.css
@@ -37,6 +37,10 @@ body {
     form {
         height: fit-content;
     }
+    .header {
+        text-align: start;
+        padding: 1rem;
+    }
     /* .left-sidebar {
         order: 1;
         flex: 1;
